--- a/eqns/equations_scaling.tex
+++ b/eqns/equations_scaling.tex
@@ -13,7 +13,7 @@
 \usepackage{amsmath,amssymb,amsfonts}%
 
 
-\title{Curriculum Vitae}
+\title{Equation Scaling}
 
 \begin{document}
 
@@ -107,4 +107,7 @@ Scaling of specific heats:
     c_v(T) = \frac{\partial \varepsilon}{\partial T} = \frac{p_{ref}}{\rho_{ref}T_{ref}}\frac{\partial \hat{\varepsilon}}{\partial \hat{T}}=c_{v,ref} \hat{c}_{v}.
 \end{equation}
 So $c_{v,ref}=p_{ref} / (\rho_{ref}T_{ref}) = k / m_{ref}$. Mayer's relation in scaled form then reads that $\hat{c}_p = \hat{c}_v + 1$.
+
+\section{Navier--Stokes equations}
+
 \end{document}
